--- a/Assets/Todo.txt
+++ b/Assets/Todo.txt
@@ -1,10 +1,12 @@
+----- completed -----
+
+2023 1013
 Docker System Update, iMac
 √ add network mplocal
-- recompose with docker ministack
-- normalize project so docker-compose.yml is again the same
+√ recompose with docker ministack
+√ normalize project so docker-compose.yml is again the same
 
------
-
+2023 1013
 Repo Time
 √ get Sourcetree working with Github on both computers
 √ clone the skysister repo
